--- a/.editorconfig
+++ b/.editorconfig
@@ -10,11 +10,13 @@ root = true
 [**]
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
+indent_size = 2
 
 # Standard at: https://github.com/felixge/node-style-guide 
 [**.js, **.json]
 trim_trailing_whitespace = true
-indent_style = tab
+indent_size = 2
 quote_type = single
 curly_bracket_next_line = false
 spaces_around_operators = true
